syntax = "proto3";
package gc.garcol.bank.proto;

option java_outer_classname = "BalanceProto";

message BaseResult {
  uint32 code = 1;
  string message = 2;
  optional string correlationId = 3;
}

message SingleBalanceResult {
  uint64 id = 1;
  uint64 amount = 2;
  uint32 precision = 3;
  bool active = 4;
  string correlationId = 5;
}

message BaseResponse {
  oneof type {
    SingleBalanceResult singleBalanceResult = 1;
    BaseResult baseResult = 2;
  }
}

message CreateBalanceCommand {
  string correlationId = 1;
}

message DepositCommand {
  uint64 id = 1;
  uint64 amount = 2;
  string correlationId = 3;
}

message WithdrawCommand {
  uint64 id = 1;
  uint64 amount = 2;
  string correlationId = 3;
}

message TransferCommand {
  uint64 fromId = 1;
  uint64 toId = 2;
  uint64 amount = 3;
  string correlationId = 4;
}

message BalanceCommand {
  oneof type {
    CreateBalanceCommand createBalanceCommand = 1;
    DepositCommand depositCommand = 2;
    WithdrawCommand withdrawCommand = 3;
    TransferCommand transferCommand = 4;
  }
}

message SingleBalanceQuery {
  uint64 id = 1;
  string correlationId = 2;
}

message BalanceQuery {
  oneof type {
      SingleBalanceQuery singleBalanceQuery = 1;
  }
}

message BalanceQueryResult {
  oneof type {
    SingleBalanceResult singleBalanceResult = 1;
    BaseResult baseResult = 2;
  }
}

message CommandLog {
  oneof type {
    CreateBalanceCommand createBalanceCommand = 1;
    DepositCommand depositCommand = 2;
    WithdrawCommand withdrawCommand = 3;
    TransferCommand transferCommand = 4;
  }
}

message CommandLogs {
  repeated CommandLog logs = 1;
}

service BalanceCommandService {
  rpc sendCommand(stream BalanceCommand) returns (stream BaseResult);
}

service BalanceQueryService {
  rpc sendQuery(stream BalanceQuery) returns (stream BalanceQueryResult);
}

